添加jwt认证中间件，fix jwt模块parse bug
